--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "pg": "^8.5.1"
