--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.15.2",
-    "pg": "^8.5.1"
+    "https": "^1.0.0",
+    "pg": "^8.5.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "got": "^11.3.0",
